[package]
name = "mn-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sxd-xpath = "0.4.2"
sxd-document = "0.3.2"
rayon = "1.5.1"
regex = "1.5.4"
lazy_static = "1.4.0"
flate2 = "1.0.22"
glob = "0.3.0"
gray_matter = "0.2.1"
serde = "1.0.133"
